# LEGOIslandRebuilder

./: .gitignore  CMakeLists.txt  README.md
pkg/: manifest.xml  resources.rc
src/: app.cpp  app.h  mainwindow.cpp  mainwindow.h  patcher.cpp  patcher.h  sha1.hpp  wxutils.h
